--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "nodejs-api-authentication",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-modules index.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
   }
 }
